completed car cutomization
