# server/handler/car_customize.go
@@ -10,6 +10,20 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// ColorCustomizationService handles color customization.
+//
+// @Summary Color Customization
+// @Description Customizes the color of a player's car.
+// @Accept json
+// @Produce json
+// @Tags Car
+// @Param playerId header string true "The ID of the player"
+// @Param colorReq body request.ColorCustomizationRequest true "Color customization request object"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Success
+// @Failure 404 {object} response.Success
+// @Failure 500 {object} response.Success
+// @Router /car/customise/color [put]
 func ColorCustomizeHandler(ctx *gin.Context) {
 	playerId, exists := ctx.Get("playerId")
 	fmt.Println("player id is:", playerId)
@@ -19,8 +33,32 @@ func ColorCustomizeHandler(ctx *gin.Context) {
 		return
 	}
 
+	var colorReq request.ColorCustomizationRequest
+	err := utils.RequestDecoding(ctx, &colorReq)
+	if err != nil {
+
+		fmt.Println("error in decoding")
+		response.ShowResponse("Bad Request", utils.HTTP_BAD_REQUEST, err.Error(), nil, ctx)
+		return
+	}
+	car.ColorCustomizationService(ctx, colorReq, playerId.(string))
+
 }
 
+// WheelCustomizeService handles wheel customization.
+//
+// @Summary Wheel Customization
+// @Description Customizes the wheels of a player's car.
+// @Accept json
+// @Tags Car
+// @Produce json
+// @Param playerId header string true "The ID of the player"
+// @Param wheelReq body request.WheelCustomizeRequest true "Wheel customization request object"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Success
+// @Failure 404 {object} response.Success
+// @Failure 500 {object} response.Success
+// @Router /car/customise/wheels [put]
 func WheelsCustomizeHandler(ctx *gin.Context) {
 	playerId, exists := ctx.Get("playerId")
 	fmt.Println("player id is:", playerId)
@@ -33,6 +71,7 @@ func WheelsCustomizeHandler(ctx *gin.Context) {
 	if err != nil {
 
 		fmt.Println("error in decoding")
+		response.ShowResponse("Bad Request", utils.HTTP_BAD_REQUEST, err.Error(), nil, ctx)
 		return
 	}
 
@@ -41,6 +80,20 @@ func WheelsCustomizeHandler(ctx *gin.Context) {
 
 }
 
+// InteriorCustomizeService handles interior customization.
+//
+// @Summary Interior Customization
+// @Description Customizes the interior of a player's car.
+// @Accept json
+// @Produce json
+// @Tags Car
+// @Param playerId header string true "The ID of the player"
+// @Param interiorReq body request.InteriorCustomizeRequest true "Interior customization request object"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Success
+// @Failure 404 {object} response.Success
+// @Failure 500 {object} response.Success
+// @Router /car/customise/interior [put]
 func InteriorCustomizeHandler(ctx *gin.Context) {
 	playerId, exists := ctx.Get("playerId")
 	fmt.Println("player id is:", playerId)
@@ -54,6 +107,7 @@ func InteriorCustomizeHandler(ctx *gin.Context) {
 	if err != nil {
 
 		fmt.Println("error in decoding")
+		response.ShowResponse("Bad Request", utils.HTTP_BAD_REQUEST, err.Error(), nil, ctx)
 		return
 	}
 
@@ -62,6 +116,19 @@ func InteriorCustomizeHandler(ctx *gin.Context) {
 
 }
 
+// LicenseCustomizeService handles license plate customization.
+//
+// @Summary License Plate Customization
+// @Description Customizes the license plate of a player's car.
+// @Accept json
+// @Tags Car
+// @Produce json
+// @Param playerId header string true "The ID of the player"
+// @Param licenseRequest body request.LicenseRequest true "License plate customization request object"
+// @Success 200 {object} response.Success
+// @Failure 400 {object} response.Success
+// @Failure 500 {object} response.Success
+// @Router /car/customise/license [put]
 func LicenseCustomizeHandler(ctx *gin.Context) {
 	playerId, exists := ctx.Get("playerId")
 	fmt.Println("player id is:", playerId)
